# rmemcache

./: .gdbinit.in  Makefile.in  bench_memcached.pl  configure.pl  lob-stress-memcached.pl  stress-memcached.pl
rmemcache/: DESCRIPTION  configure  configure.ac
rmemcache/R/: rmemcache.R  zzz.R
rmemcache/man/: rmemcache.package.Rd
rmemcache/src/: Makevars  Makevars.win  config.h.in  rmemcache.c  sock.c  sock.h
